--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 :root {
-  --color-background:  #ffffff;
+	--color-background: #fafaf9;
   --color-text: #1F2937;
   --color-accent: #E11D48;
   --color-border: #D6D3D1;
@@ -681,10 +681,14 @@ body {
 }
 
 .case-howmightwe__image-wrapper {
+  width: 100%;
+  max-width: 1080px;
+  margin: 0 auto;
   border: 1px solid var(--color-stone-200);
   border-radius: 8px;
   overflow: hidden;
 }
+
 
 .case-howmightwe__image {
   display: block;
@@ -717,7 +721,15 @@ body {
   flex: 0 0 760px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  /* gap: 20px; */
+}
+
+.case-howmightwe__right p + p {
+  margin-top: 20px;
+}
+
+.case-howmightwe__right p + ul {
+  margin-top: 0;
 }
 
 .case-howmightwe__subheading {
@@ -756,8 +768,7 @@ body {
 }
 
 .case-howmightwe__card {
-  /* margin-top: 20px; */
-	/* too much spacing */
+  margin-top: 20px;
   width: 760px;
   
   border-top-left-radius: 8px;
@@ -776,6 +787,8 @@ body {
 	background-color: #CCFBF1;
   gap: 15px;
   padding: 10px;
+	  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   /* border-bottom: 1px solid var(--color-stone-200, #E7E5E4); */
 }
 
@@ -890,4 +903,63 @@ margin-block-end: 0;
 
 .case-goals__list {
 	margin: 0;
+	padding-inline-start:0;
+}
+.case-howmightwe__row--wide {
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.case-insight {
+    border-radius: 8px;
+  overflow: hidden;
+  background-color: white;
+	margin-bottom: 20px;
+}
+
+.case-insight__header {
+  border-top: 1px solid var(--color-stone-200);
+  border-left: 1px solid var(--color-stone-200);
+  border-right: 1px solid var(--color-stone-200);
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  background-color: var(--color-green-soft-bg, #CCFBF1);
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  padding: 10px;
+}
+
+.case-insight__icon-wrapper {
+  width: 46px;
+  height: 46px;
+  background-color: #99F6E4;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.case-insight__icon {
+  width: 24px;
+  height: 24px;
+}
+
+.case-insight__title {
+  font-size: 18px;
+  font-weight: 700;
+  font-family: Inter, sans-serif;
+  line-height: 100%;
+  letter-spacing: 0.5%;
+}
+
+.case-insight__list {
+  list-style: disc;
+  padding: 10px 20px;
+  margin: 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
 }
